recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:14: error: not found: value sierpinki
		sierpinki(level-1, length*0.5)
                ^